--- a/chicago-luxury-side-lot-subsidy.html
+++ b/chicago-luxury-side-lot-subsidy.html
@@ -25,7 +25,6 @@
                         <h1>Subsidizing the Rich: The Hidden Cost of Chicago’s Luxury Side Yards</h1>
 <p><img alt="Private basketball court on a side lot" src="images/basketball.png" /></p>
 <p>In high-demand areas, wealthy homeowners frequently purchase adjacent tear-down properties, demolish the existing structures, and absorb the parcels as massive private side yards. Because property taxes in Illinois assess vacant land drastically lower than improved land, these homeowners pay a fraction of the tax per square foot compared to their own primary residence.  Chicago effectively subsidizes these rich home owners to keep the lot empty as redeveloping the property would bring in more property taxes.</p>
-
 <p>Our analysis found <strong>463</strong> adjacent empty lots owned by neighbors in just five high-demand north and west side neighborhoods. This is likely a significant underestimate, as there are plenty of side lots lots which don't automatically match the filters described in the next section.</p>
 <h2>Analysis and Methodology: Defining the "Side Yard"</h2>
 <p>An empty lot is only counted if it passes a strict set of spatial, legal, and economic filters:</p>
@@ -55,7 +54,7 @@
 <li><strong>Net Increase in Taxes:</strong> $23,423,846 per year</li>
 </ul>
 <h2>Park Proximity</h2>
-<p>Even if owners choose to sell rather than pay the updated tax rate, they stand to gain significantly from the increased land value that comes with higher-density zoning.  And while they might lose their private green space, <strong>84%</strong> of these lots are only a 5 minute or less walk from the nearest park. Some of them are even directly next to a park, like this one in Lakeview East.</p>
+<p>Even if owners choose to sell rather than pay the updated tax rate, they stand to gain significantly from the increased land value that comes with higher-density zoning.  And while they might lose their private green space, <strong>84%</strong> of these lots are a 5 minute or less walk from the nearest park. Some of them are even directly next to a park, like this one in Lakeview East.</p>
 <p><img alt="View of an empty lot from a park" src="images/from-park.png" /></p>
                     </div>
                 </div>
@@ -63,3 +62,4 @@
         </div>
     </body>
     </html>
+    
