--- a/chicago-luxury-side-lot-subsidy.html
+++ b/chicago-luxury-side-lot-subsidy.html
@@ -25,43 +25,34 @@
                     <div class="prose max-w-none">
                         <h1>Subsidizing the Rich: The Hidden Cost of Chicago’s Luxury Side Yards</h1>
 <p><img alt="Private basketball court on a side lot" src="images/basketball.png" /></p>
-<p>In high-demand areas, wealthy homeowners frequently purchase adjacent tear-down properties, demolish the existing structures, and absorb the parcels as massive private side yards. Because property taxes in Illinois assess vacant land drastically lower than improved land, these homeowners pay a fraction of the tax per square foot compared to their own primary residence.  Chicago effectively subsidizes these rich home owners to keep the lot empty as redeveloping the property would bring in more property taxes.</p>
-<p>Our analysis found <strong>463</strong> adjacent empty lots owned by neighbors in just five high-demand north and west side neighborhoods. This is likely a significant underestimate, as there are plenty of side lots lots which don't automatically match the filters described in the next section.</p>
+<p>In high-demand areas, wealthy homeowners frequently purchase adjacent tear-down properties, demolish the existing structures, and absorb the parcels as massive private side yards. Because property taxes in Illinois assess vacant land drastically lower than built homes, these homeowners pay a fraction of the tax per square foot compared to their own primary residence.  Chicago effectively subsidizes these rich home owners to keep the lot empty as redeveloping the property would bring in more property taxes.</p>
+<p>Our analysis found <strong>379</strong> adjacent empty lots owned by neighbors in just the Lincoln Park, Lakeview, Logan Square, and West Town neighborhoods. This is likely a significant underestimate, as there are plenty of side lots lots which don't automatically match the filters described in the next section.</p>
 <h2>Analysis and Methodology: Defining the "Side Yard"</h2>
-<p>An empty lot is only counted if it passes a strict set of spatial, legal, and economic filters:</p>
-<h3>1. Spatial &amp; Zoning Filters</h3>
+<p>To be classified as a "Side Yard," an empty lot must:</p>
 <ul>
-<li><strong>Residential Zoning:</strong> The lot must be zoned exclusively for residential use (<code>RS</code>, <code>RT</code>, or <code>RM</code>).</li>
-<li><strong>Adjacency:</strong> The empty lot and the built lot must be geographically adjacent (intersecting within a 5-foot spatial tolerance).</li>
+<li>Be zoned for residential use and sit geographically adjacent to a built lot within a 5-foot spatial tolerance.</li>
+<li>Be registered to the exact same taxpayer as the adjacent primary residence.</li>
+<li>Possess an estimated building value under $10,000 and a Cook County Assessor property class designated as vacant land or an uninhabitable teardown.</li>
+<li>Sit next to a primary home with an estimated market value of at least $500,000.</li>
 </ul>
-<h3>2. Ownership Matching</h3>
-<ul>
-<li><strong>Taxpayer Verification:</strong> The empty lot and the adjacent home must have the exact same owner.</li>
-</ul>
-<h3>3. Value and Condition Thresholds</h3>
-<ul>
-<li><strong>The "Empty" Lot:</strong> The side lot must have an estimated building value of &lt;$10,000, signifying it is effectively vacant or a demolished teardown. It must also have a Cook County Assessor property class corresponding to vacant land or uninhabitable teardowns.</li>
-<li><strong>The Primary Residence:</strong> The adjacent home owned by the same taxpayer must have an estimated market value of at least $500,000, ensuring we are capturing high-value property expansions rather than distressed blocks.</li>
-</ul>
-<p>I then manually verified the list and removed some outliers or lots that have been developed since the data was last updated.</p>
 <h2>The Cost of the Status Quo</h2>
-<p>If these vacant side lots were taxed at the exact same rate per square foot as the neighboring home they are attached to, the city would collect an estimated <strong>$5,736,594</strong> in additional property taxes every single year.</p>
-<h2>The Upzoning Solution</h2>
-<p>Illinois law makes it difficult to heavily tax vacant residential land based purely on highest-and-best-use due to constitutional uniformity clauses. However, upzoning provides a legal pathway to raise some taxes. The recently announced BUILD act legalizes 4 unit condos on these parcels by-right, which will increase the underlying land value. The property taxes will rise organically, and owners to either pay a slightly larger (but still heavily subsidized) premium for their private park or sell it to a developer.</p>
 <div class="callout">
-Every year a luxury side yard remains a private park, we lose <strong>$5,736,594</strong> in direct revenue because these lots are taxed as "vacant" rather than as the high-value residential land they actually serve as. 
+Every year a luxury side yard remains a private park, we lose <strong>$4,955,493</strong> in direct revenue because these lots are taxed as "vacant" rather than as the high-value residential land they actually serve as. 
 <br>
 <br>
 
-But the true "opportunity subsidy" is much higher. By allowing these parcels to sit idle in high-demand neighborhoods, the city is effectively walking away from <strong>$23,423,846</strong> in annual tax revenue that would be generated if these lots were developed into the 4-unit buildings allowed under the BUILD Act.
+But the true "opportunity subsidy" is much higher. By allowing these parcels to sit idle in high-demand neighborhoods, the city is effectively walking away from <strong>$19,182,585</strong> in annual tax revenue that would be generated if these lots were developed into the 4-unit buildings allowed under the BUILD Act.
 <br>
 <br>
 
-<strong>Chicago is subsidizing the exclusivity of the wealthy over $23 million every single year while missing out on 1,852 much needed houses.</strong>
+<strong>Chicago is subsidizing the exclusivity of the wealthy nearly $20 million every single year while missing out on 1,516 much needed houses.</strong>
 </div>
 
+<h2>The Solution</h2>
+<p>To address this disparity, Illinois should implement a split-roll classification for residential properties: increasing the assessment rate for vacant land to 25%. Applying this change to these specific side lots alone would generate <strong>$1,925,122</strong> in immediate annual tax revenue.</p>
+<p>This may also encourage some of these private lot owners to develop the land into housing which further increases the taxes raised in the area and provides much needed homes.</p>
 <h2>Park Proximity</h2>
-<p>Even if owners choose to sell rather than pay the slightly increased tax rate, they stand to gain significantly from the increased land value that comes with higher-density zoning.  And while they might lose their private green space, <strong>84%</strong> of these lots are a 5 minute or less walk from the nearest park. Some of them are even directly next to a park, like this one in Lakeview East.</p>
+<p>While some these homes may need to sell their side lots if they have to start paying a fairer share, many of these homes still have private front or back yards, balconies, and rooftop decks. And <strong>87%</strong> of these lots are a 5 minute or less walk from the nearest park. Some of them are even directly next to a park, like this one in Lakeview East.</p>
 <p><img alt="View of an empty lot from a park" src="images/from-park.png" /></p>
                     </div>
                 </div>
