--- a/chicago-luxury-side-lot-subsidy.html
+++ b/chicago-luxury-side-lot-subsidy.html
@@ -26,7 +26,7 @@
                         <h1>Subsidizing the Rich: The Hidden Cost of Chicago’s Luxury Side Yards</h1>
 <p><img alt="Private basketball court on a side lot" src="images/basketball.png" /></p>
 <p>In high-demand areas, wealthy homeowners frequently purchase adjacent tear-down properties, demolish the existing structures, and absorb the parcels as massive private side yards. Because property taxes in Illinois assess vacant land drastically lower than built homes, these homeowners pay a fraction of the tax per square foot compared to their own primary residence.  Chicago effectively subsidizes these rich home owners to keep the lot empty as redeveloping the property would bring in more property taxes.</p>
-<p>Our analysis found <strong>379</strong> adjacent empty lots owned by neighbors in just the Lincoln Park, Lakeview, Logan Square, and West Town neighborhoods. This is likely a significant underestimate, as there are plenty of side lots lots which don't automatically match the filters described in the next section.</p>
+<p>Our analysis found <strong>379</strong> adjacent empty lots owned by neighbors in just the Lincoln Park, Lakeview, Logan Square, and West Town neighborhoods. This is likely an underestimate, as there are plenty of side lots lots which don't automatically match the filters described in the next section.</p>
 <h2>Analysis and Methodology: Defining the "Side Yard"</h2>
 <p>To be classified as a "Side Yard," an empty lot must:</p>
 <ul>
@@ -49,7 +49,7 @@ But the true "opportunity subsidy" is much higher. By allowing these parcels to 
 </div>
 
 <h2>The Solution</h2>
-<p>To address this disparity, Illinois should implement a split-roll classification for residential properties: increasing the assessment rate for vacant land to 25%. Applying this change to these specific side lots alone would generate <strong>$1,925,122</strong> in immediate annual tax revenue.</p>
+<p>To address this disparity, Chicago should implement a split-roll classification for residential properties: increasing the assessment rate for vacant land to 25%. Applying this change to these specific side lots alone would generate <strong>$1,925,122</strong> in immediate annual tax revenue.</p>
 <p>This may also encourage some of these private lot owners to develop the land into housing which further increases the taxes raised in the area and provides much needed homes.</p>
 <h2>Park Proximity</h2>
 <p>While some these homes may need to sell their side lots if they have to start paying a fairer share, many of these homes still have private front or back yards, balconies, and rooftop decks. And <strong>87%</strong> of these lots are a 5 minute or less walk from the nearest park. Some of them are even directly next to a park, like this one in Lakeview East.</p>
