article wording updates

--- a/chicago-luxury-side-lot-subsidy.html
+++ b/chicago-luxury-side-lot-subsidy.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The Side Yard Subsidy</title>
+        <title>The Private Yard Tax Break</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <style>
             .prose h1 { font-size: 2.25rem; font-weight: bold; margin-bottom: 1rem; color: #1f2937; line-height: 1.2; }
@@ -23,10 +23,10 @@
             <div class="flex flex-col gap-8">
                 <div class="bg-white p-8 md:p-12 rounded-xl shadow-lg border border-gray-100">
                     <div class="prose max-w-none">
-                        <h1>Subsidizing the Rich: The Hidden Cost of Chicago’s Luxury Side Yards</h1>
+                        <h1>How Chicago Pays $17M a Year to Subsidize Private Yards for the Rich</h1>
 <p><img alt="Private basketball court on a side lot" src="images/basketball.png" /></p>
 <p>In high-demand areas, wealthy homeowners frequently purchase adjacent tear-down properties, demolish the existing structures, and absorb the parcels as massive private side yards. Because property taxes in Illinois assess vacant land drastically lower than built homes, these homeowners pay a fraction of the tax per square foot compared to their own primary residence.  Chicago effectively subsidizes these rich home owners to keep the lot empty as redeveloping the property would bring in more property taxes.</p>
-<p>Our analysis found <strong>379</strong> adjacent empty lots owned by neighbors in just the Lincoln Park, Lakeview, Logan Square, and West Town neighborhoods. This is likely an underestimate, as there are plenty of side lots lots which don't automatically match the filters described in the next section.</p>
+<p>Our analysis found <strong>347</strong> adjacent empty lots owned by neighbors in just the Lincoln Park, Lakeview, Logan Square, and West Town neighborhoods. This is likely a ~50% underestimate, as there are plenty of side lots lots which don't automatically match the filters described in the next section.</p>
 <h2>Analysis and Methodology: Defining the "Side Yard"</h2>
 <p>To be classified as a "Side Yard," an empty lot must:</p>
 <ul>
@@ -37,22 +37,22 @@
 </ul>
 <h2>The Cost of the Status Quo</h2>
 <div class="callout">
-Every year a luxury side yard remains a private park, we lose <strong>$4,955,493</strong> in direct revenue because these lots are taxed as "vacant" rather than as the high-value residential land they actually serve as. 
+Every year a luxury side yard remains a private park, we lose <strong>$4,483,513</strong> in direct revenue because these lots are taxed as "vacant" rather than as the high-value residential land they actually serve as. 
 <br>
 <br>
 
-But the true "opportunity subsidy" is much higher. By allowing these parcels to sit idle in high-demand neighborhoods, the city is effectively walking away from <strong>$19,182,585</strong> in annual tax revenue that would be generated if these lots were developed into the 4-unit buildings allowed under the BUILD Act.
+But the true "opportunity subsidy" is much higher. By allowing these parcels to sit idle in high-demand neighborhoods, the city is effectively walking away from <strong>$17,459,275</strong> in annual tax revenue that would be generated if these lots were developed into the 4-unit buildings allowed under the BUILD Act.
 <br>
 <br>
 
-<strong>Chicago is subsidizing the exclusivity of the wealthy nearly $20 million every single year while missing out on 1,516 much needed houses.</strong>
+<strong>Chicago is subsidizing the exclusivity of the wealthy $17 million every single year, or $50,000 per yard, while missing out on 1,388 much needed houses.</strong>
 </div>
 
 <h2>The Solution</h2>
-<p>To address this disparity, Chicago should implement a split-roll classification for residential properties: increasing the assessment rate for vacant land to 25%. Applying this change to these specific side lots alone would generate <strong>$1,925,122</strong> in immediate annual tax revenue.</p>
+<p>To address this disparity, Chicago should implement a split-roll classification for residential properties: increasing the assessment rate for vacant land to 25%. Applying this change to these specific side lots alone would generate <strong>$1,918,087</strong> in immediate annual tax revenue.</p>
 <p>This may also encourage some of these private lot owners to develop the land into housing which further increases the taxes raised in the area and provides much needed homes.</p>
 <h2>Park Proximity</h2>
-<p>While some these homes may need to sell their side lots if they have to start paying a fairer share, many of these homes still have private front or back yards, balconies, and rooftop decks. And <strong>87%</strong> of these lots are a 5 minute or less walk from the nearest park. Some of them are even directly next to a park, like this one in Lakeview East.</p>
+<p>While some these homes may need to sell their side lots if they have to start paying a fairer share, many of these homes still have private front or back yards, balconies, and rooftop decks. And <strong>86% of these lots are a 5 minute or less walk from the nearest park</strong>. Some of them are even directly next to a park, like this house with two side yards in Lakeview East.</p>
 <p><img alt="View of an empty lot from a park" src="images/from-park.png" /></p>
                     </div>
                 </div>
